--- a/HANDOVER_Bootstrapped/css/custom.css
+++ b/HANDOVER_Bootstrapped/css/custom.css
@@ -1,4 +1,4 @@
-/* this is my custom CSS */
+/* this is my CUSTOM CSS */
 *,
 html,
 body
@@ -9,6 +9,12 @@ body
     padding:0;
     font-size:1em;
     color:#4d4d4d;
+}
+
+/* LINKS */
+a .orange
+{
+    color:#f26900;
 }
 
 /* HEADER */
