--- a/HANDOVER_Bootstrapped/mvc/templates/auth_home.html.twig
+++ b/HANDOVER_Bootstrapped/mvc/templates/auth_home.html.twig
@@ -19,11 +19,11 @@
             <span class="caret"></span>
         </button>
         <ul class="dropdown-menu">
-            <li class="divider"></li>
-            <li><a href="./logout">Log Out</a></li>
+            <li>&nbsp;</li>
+            <li><a href="./logout" class="orange">Log Out</a></li>
         </ul>
     </div>
-    
+
 {% endblock %}
 
 
