--- a/HANDOVER_Bootstrapped/css/custom.css
+++ b/HANDOVER_Bootstrapped/css/custom.css
@@ -37,7 +37,7 @@ header #header1
 {
     color:#f26900;
     font-style:italic;
-    margin:0;
+    margin-bottom:2em;
     padding:0;
 }
 
@@ -47,6 +47,7 @@ main
     margin:0;
     padding:0;
 }
+
 
 
 /* BUTTONS */
