--- a/HANDOVER_Bootstrapped/mvc/templates/auth_home.html.twig
+++ b/HANDOVER_Bootstrapped/mvc/templates/auth_home.html.twig
@@ -18,7 +18,7 @@
 
 {#--------------------------------#}
 {% block navigation %}
-	&nbsp;
+    {% include 'navigation.html.twig' %}
 {% endblock %}
 
 {#--------------------------------#}
