--- a/HANDOVER_Bootstrapped/mvc/templates/index.html.twig
+++ b/HANDOVER_Bootstrapped/mvc/templates/index.html.twig
@@ -12,13 +12,12 @@
 {#--------------------------------#}
 
 {% block navigation %}
-	&nbsp;
 {% endblock %}
 
 {#--------------------------------#}
 
 {% block loggedIn %}
-    <a href="./login"><button type="submit" class="btn btn-orange">Log In</button></a>
+    <a href="./login" class="btn btn-orange" role="button">Log In</a>
 {% endblock %}
 
 {#--------------------------------#}
