--- a/HANDOVER_Bootstrapped/css/custom.css
+++ b/HANDOVER_Bootstrapped/css/custom.css
@@ -10,12 +10,23 @@ body
     font-size:1em;
     color:#4d4d4d;
 }
+body
+{
+    overflow-x: hidden;
+}
 
-/* LINKS */
-a .orange
+/* CONTAINER */
+.customContainer
+{
+    margin:0;
+}
+
+/* LINKS and SPANS */
+.orange
 {
     color:#f26900;
 }
+
 
 /* HEADER */
 header
@@ -28,8 +39,33 @@ header
 
 header #header1
 {
-    margin-bottom:1em;
+    margin:0 0 1em 0;
     padding:0;
+    width:100%;
+}
+
+header #header2
+{
+    margin:0 0 1em 0;
+    padding:0;
+    width:100%;
+}
+
+.noSpace
+{
+    margin:0; !important
+    padding:0 !important;
+}
+
+.loggedIn
+{
+    text-align:right;
+
+}
+
+.col-sm-12
+{
+    width:100%;
 }
 
 /* TICKER */
@@ -48,7 +84,16 @@ main
     padding:0;
 }
 
+/* TABLES */
+@-moz-document url-prefix() {
+    fieldset { display: table-cell; }
+}
 
+/* FORMS */
+.formSpacer
+{
+    border-top:1px solid #e7e7e7;
+}
 
 /* BUTTONS */
 .btn-orange
@@ -66,6 +111,25 @@ main
     border:1px solid #4d4d4d;
 }
 
+.btn-grey
+{
+    background-color: #4d4d4d;
+    color: #f26900;
+    border: 1px solid #4d4d4d;
+}
+
+.btn-grey:hover,
+.btn-grey:active
+{
+    background-color:#ffffff;
+    color:#f26900;
+    border:1px solid #4d4d4d;
+}
+
+.btn-user
+{
+    margin-top:2em;
+}
 .btn-white
 {
     background-color: #ffffff;
