--- a/HANDOVER_Bootstrapped/mvc/templates/_layout.html.twig
+++ b/HANDOVER_Bootstrapped/mvc/templates/_layout.html.twig
@@ -24,21 +24,17 @@
  <body>
     <header>
         <div class="row" id="header1">
-            <div class="col-sm-12">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-9">
-                            <img src="img/meteor_logo.png" alt="corporate-logo">
-                        </div>
-                        <div class="col-sm-3">
-                            {% block loggedIn %}{% endblock %}
-                        </div>
-                    </div>
+            <div class="container">
+                <div class="col-sm-8 noSpace">
+                    <img src="img/meteor_logo.png" alt="corporate-logo" class="noSpace">
+                </div>
+                <div class="col-sm-4 loggedIn">
+                    {% block loggedIn %}{% endblock %}
                 </div>
             </div>
         </div>
         <div class="row" id="header2">
-            <nav class="navbar navbar-default ">
+            <nav class="navbar navbar-default">
                 <div class="container">
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#collapse">
@@ -62,10 +58,12 @@
         {{ ticker }}
     </marquee>
 
-    <main class="row">
-        <div class="col-sm-12">
+    <main>
+        <div class="row">
             <div class="container">
-                {% block main %}{% endblock %}
+                <div class="col-sm-12">
+                    {% block main %}{% endblock %}
+                </div>
             </div>
         </div>
     </main>
