--- a/HANDOVER_Bootstrapped/mvc/templates/auth_admin.html.twig
+++ b/HANDOVER_Bootstrapped/mvc/templates/auth_admin.html.twig
@@ -24,60 +24,55 @@
 {#--------------------------------#}
 
 {% block main %}
-	
-<div id="adminSection">
-<table border ="0" cellpadding="2" cellspacing="2" width="90%">
-	<tr><td colspan="7"><div class="adminTable3"><h3>{{ numUsers }} {{ search }}</h3></div></td></tr>
-	
-	<tr>
-		<th><div class="adminTable4">Surname</div></th>
-		<th><div class="adminTable4">First Name</div></th>
-		<th><div class="adminTable4">Username</div></th>
-		<th><div class="adminTable4">Category</div></th>
-		<th><div class="adminTable4">Email</div></th>
-		<th>&nbsp;</th>
-		<th >	
-			<div class="adminTable">
-				<form action="./authCreateUser" method="POST" formID="formCreate">
-					<input type="submit" name="createUser" value="create user" class="btnUsers">
-				</form>
-			</div>
-		</th>
-	</tr>
-	
-	<!--THIS will loop through the associateive array USER Details-->
-	{% for user in userArr %}
-		<tr>
-			<td><div class="adminTable">{{ user.userSName }}</div></td>
-			<td><div class="adminTable">{{ user.userFName }}</div></td>
-			<td><div class="adminTable">{{ user.userLogin }}</div></td>
-			<td><div class="adminTable">{{ user.userCat }}</div></td>
-			<td><div class="adminTable">{{ user.userEmail }}</div></td>
-			<td>
-				<div class="adminTable">
-						<form action="./authEditUser" method="POST" formID="formUpdate">
-						<input type="hidden" name="userId" value="{{ user.userId }}">
-						<input type="submit" name="editUser" value="edit" class="btnUsers">
-						</form>
-				</div>
-			</td>
 
-			<td>				
-				<div class="adminTable">
-						<form action="./authDeleteUser" method="POST" formID="formUpdate">
-						<input type="hidden" name="userId" value="{{ user.userId }}">
-						<input type="submit" name="deleteUser" value="delete" class="btnUsers">
-						</form>
-				</div>
-			</td>
-			
-		</tr>
-	{% endfor %}
-</table>
-</div>
+    <table class="table table-striped table-responsive">
+        <tr><td colspan="7"><div class="adminTable3"><h3>{{ numUsers }} {{ search }}</h3></div></td></tr>
+        <tr>
+            <th><div class="adminTable4">Surname</div></th>
+            <th><div class="adminTable4">First Name</div></th>
+            <th><div class="adminTable4">Username</div></th>
+            <th><div class="adminTable4">Category</div></th>
+            <th><div class="adminTable4">Email</div></th>
+            <th>&nbsp;</th>
+            <th >
+                <div class="adminTable">
+                    <form action="./authCreateUser" method="POST" formID="formCreate">
+                        <input type="submit" name="createUser" value="create user" class="btn btn-grey">
+                    </form>
+                </div>
+            </th>
+        </tr>
+
+        <!--THIS will loop through the associateive array USER Details-->
+        {% for user in userArr %}
+            <tr>
+                <td><div class="adminTable">{{ user.userSName }}</div></td>
+                <td><div class="adminTable">{{ user.userFName }}</div></td>
+                <td><div class="adminTable">{{ user.userLogin }}</div></td>
+                <td><div class="adminTable">{{ user.userCat }}</div></td>
+                <td><div class="adminTable">{{ user.userEmail }}</div></td>
+                <td>
+                    <div class="adminTable">
+                            <form action="./authEditUser" method="POST" formID="formUpdate">
+                            <input type="hidden" name="userId" value="{{ user.userId }}">
+                            <input type="submit" name="editUser" value="edit" class="btn btn-orange">
+                            </form>
+                    </div>
+                </td>
+                <td>
+                    <div class="adminTable">
+                        <form action="./authDeleteUser" method="POST" formID="formUpdate">
+                        <input type="hidden" name="userId" value="{{ user.userId }}">
+                        <input type="submit" name="deleteUser" value="delete" class="btn btn-orange">
+                        </form>
+                    </div>
+                </td>
+
+            </tr>
+        {% endfor %}
+    </table>
 
 
 
 
-	
 {% endblock %}
