--- a/HANDOVER_Bootstrapped/mvc/templates/auth_ticker.html.twig
+++ b/HANDOVER_Bootstrapped/mvc/templates/auth_ticker.html.twig
@@ -12,57 +12,32 @@
 {#--------------------------------#}
 
 {% block loggedIn %}
-	{{ loggedInText | raw }}
+    {% include 'logged_in.html.twig' %}
 {% endblock %}
 
 
 {#--------------------------------#}
-{% block nav %}
-	{{ nav | raw }}
+{% block navigation %}
+    {% include 'navigation.html.twig' %}
 {% endblock %}
 
 {#--------------------------------#}
 
 {% block main %}
-	
-<div id="adminFormSearch" class="container_12">
-	<div id="separator" class="grid_12">
-		&nbsp;
-	</div>
-	<div id="separator" class="grid_12">
-		&nbsp;
-	</div>
-<!-----------------------------------Line 1--------------------------------------------->
-	<div class="grid_1">
-		&nbsp;
-	</div>
-		<form action="./authCreateTicker" method="POST">
-			<div id="siteSelect" class="grid_10">		
-				<label for="tickerDesc">Ticker Description:</label>
-				<input type="text" name="tickerDesc" id="tickerDesc" value="{{ ticker }}" size="100" maxlength="190"></p>
-			</div>
-			
-			<div class="grid_1">
-				&nbsp;
-			</div>
-		
-			<!-----------------------------------Line 2--------------------------------------------->
-		
-			<div id="separator" class="grid_12">
-				&nbsp;
-			</div>
-		
-			<!-----------------------------------Line 3--------------------------------------------->
-			<div class="grid_5">&nbsp;</div>
-			
-			<div id="button" class="grid_3">
-				<input type="submit" name="createTicker" value="Create" class="btn">
-			</div>
-			
-			<div class="grid_4">&nbsp;</div>
-			
-		</form>
+        <div class="row">
+            <div class="col-sm-2">&nbsp;</div>
+            <div class="col-sm-8">
+                <form class="form-horizontal" action="./authCreateTicker" method="POST">
+                    <div class="form-group">
+                        <label for="tickerDesc" class="control-label">Ticker Description:</label>
+                        <input type="text" class="form-control" name="tickerDesc" id="tickerDesc" value="{{ ticker }}" size="100" maxlength="190">
+                    </div>
+                    <div class="form-group">
+                        <button class="btn btn-orange btn-block" name="createTicker" value="Create" type="submit">Button</button>
 
-</div> <!--END DIV adminFormSearch -----> 
-	
+                    </div>
+                </form>
+            </div>
+            <div class="col-sm-2">&nbsp;</div>
+        </div>
 {% endblock %}
