--- a/HANDOVER_Bootstrapped/mvc/templates/navigation.html.twig
+++ b/HANDOVER_Bootstrapped/mvc/templates/navigation.html.twig
@@ -1,4 +1,4 @@
-<li class="active"><a href="#">Home</a></li>
+<li class="active"><a href="./authHome">Home</a></li>
 <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Teams<span class="caret"></span></a>
     <ul class="dropdown-menu">
@@ -17,5 +17,5 @@
 </li>
 <li><a href="#">Search</a></li>
 <li><a href="#">Ongoing CR's</a></li>
-<li><a href="#">Dashboard</a></li>
-<li><a href="#">Ticker</a></li>
+<li><a href="./authDashAdmin">Dashboard</a></li>
+<li><a href="./authTicker">Ticker</a></li>
