--- a/HANDOVER_Bootstrapped/mvc/templates/auth_edit_user.html.twig
+++ b/HANDOVER_Bootstrapped/mvc/templates/auth_edit_user.html.twig
@@ -96,16 +96,16 @@
             <div class="col-sm-3">&nbsp;</div>
             <div class="col-sm-6">
                 <div class="form-group">
-                    {% set catGeneral = 'general' %}
+
                     {% set catAdmin = 'admin' %}
                     <label for="userCat">User Category</label>
                     <select name="userCat" class="form-control">
-                        {% if catGeneral == userCat %}
-                            <option value="general" selected>General</option>
-                            <option value="admin">Admin</option>
-                        {% elseif catAdmin == userCat %}
+                        {% if catAdmin == userCat %}
                             <option value="general">General</option>
                             <option value="admin" selected>Admin</option>
+                        {% else %}
+                            <option value="general" selected>General</option>
+                            <option value="admin">Admin</option>
                         {% endif %}
                     </select>
                 </div>
