--- a/HANDOVER_Non_Bootstrap/mvc/templates/auth_edit_user.html.twig
+++ b/HANDOVER_Non_Bootstrap/mvc/templates/auth_edit_user.html.twig
@@ -108,7 +108,7 @@
 	</div>
 	
 	<div class="grid_4" >
-		<input type="text" name="userLogin" value="{{ userArr.userLogin }}" {{ readOnly | raw }} >
+		<input type="text" name="userLogin" value="{{ userArr.userName }}" {{ readOnly | raw }} >
 		<span id="usernameLoading"><img src="./img/indicator.gif" alt="" /></span>
 		<span id="usernameResult">{{ readOnlyNotice }}</span>
 	</div>
