--- a/HANDOVER_Bootstrapped/mvc/templates/navigation.html.twig
+++ b/HANDOVER_Bootstrapped/mvc/templates/navigation.html.twig
@@ -2,16 +2,16 @@
 <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Teams<span class="caret"></span></a>
     <ul class="dropdown-menu">
-        <li><a href="#">VAS</a></li>
-        <li><a href="#">Internet</a></li>
-        <li><a href="#">RAN</a></li>
-        <li><a href="#">CRM</a></li>
-        <li><a href="#">B&P Ops</a></li>
-        <li><a href="#">Leon</a></li>
-        <li><a href="#">Dundrum</a></li>
-        <li><a href="#">Clonshaugh</a></li>
-        <li><a href="#">Citywest</a></li>
-        <li><a href="#">Shift Lead</a></li>
+        <li><a href="./authIncident?searchParam=VAS">VAS</a></li>
+        <li><a href="./authIncident?searchParam=INTERNET">Internet</a></li>
+        <li><a href="./authIncident?searchParam=RAN">RAN</a></li>
+        <li><a href="./authIncident?searchParam=CRM">CRM</a></li>
+        <li><a href="./authIncident?searchParam=B&POPS">B&P Ops</a></li>
+        <li><a href="./authIncident?searchParam=LEON">Leon</a></li>
+        <li><a href="./authIncident?searchParam=DUNDRUM">Dundrum</a></li>
+        <li><a href="./authIncident?searchParam=CLONSHAUGH">Clonshaugh</a></li>
+        <li><a href="./authIncident?searchParam=CITYWEST">Citywest</a></li>
+        <li><a href="./authIncident?searchParam=SHIFTLEAD">Shift Lead</a></li>
 
     </ul>
 </li>
