--- a/HANDOVER_Bootstrapped/mvc/templates/auth_incident_list.html.twig
+++ b/HANDOVER_Bootstrapped/mvc/templates/auth_incident_list.html.twig
@@ -27,7 +27,7 @@
 	<table class="table table-striped table-hover" >
 		<tr>
 		<th colspan="7">
-			<h3>{{ totalRecords }} Open Incidents (ordered by age) for {{ searchParam }}</h3>
+			<h3><span class="orange">{{ totalRecords }}</span> Open Incidents (ordered by age) for <span class="orange">{{ searchParam }}</span></h3>
 		</th>
 		</tr>
 
