--- a/HANDOVER_Bootstrapped/mvc/templates/auth_ticker.html.twig
+++ b/HANDOVER_Bootstrapped/mvc/templates/auth_ticker.html.twig
@@ -11,9 +11,7 @@
 
 {#--------------------------------#}
 
-{% block loggedIn %}
-    {% include 'logged_in.html.twig' %}
-{% endblock %}
+{% block loggedIn %}{% include 'logged_in.html.twig' %}{% endblock %}
 
 
 {#--------------------------------#}
