--- a/HANDOVER_Bootstrapped/mvc/templates/navigation.html.twig
+++ b/HANDOVER_Bootstrapped/mvc/templates/navigation.html.twig
@@ -6,7 +6,7 @@
         <li><a href="./authIncident?searchParam=INTERNET">Internet</a></li>
         <li><a href="./authIncident?searchParam=RAN">RAN</a></li>
         <li><a href="./authIncident?searchParam=CRM">CRM</a></li>
-        <li><a href="./authIncident?searchParam=B&POPS">B&P Ops</a></li>
+        <li><a href="./authIncident?searchParam=ITOPS">IT Ops</a></li>
         <li><a href="./authIncident?searchParam=LEON">Leon</a></li>
         <li><a href="./authIncident?searchParam=DUNDRUM">Dundrum</a></li>
         <li><a href="./authIncident?searchParam=CLONSHAUGH">Clonshaugh</a></li>
@@ -16,6 +16,6 @@
     </ul>
 </li>
 <li><a href="#">Search</a></li>
-<li><a href="#">Ongoing CR's</a></li>
+<li><a href="./authOnGoingCr">Ongoing CR's</a></li>
 <li><a href="./authDashAdmin">Dashboard</a></li>
 <li><a href="./authTicker">Ticker</a></li>
