--- a/HANDOVER_Bootstrapped/mvc/templates/logged_in.html.twig
+++ b/HANDOVER_Bootstrapped/mvc/templates/logged_in.html.twig
@@ -1,10 +1,8 @@
 <div class="dropdown">
-    <button class="btn btn-white dropdown-toggle" type="button" data-toggle="dropdown">
-        <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-            {{ loggedInText }}
-        <span class="caret"></span>
+    <button id="dLabel" class="btn btn-white dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <span class="glyphicon glyphicon-user" aria-hidden="true"></span>{{ loggedInText }}<span class="caret"></span>
     </button>
-    <ul class="dropdown-menu">
+    <ul class="dropdown-menu" aria-labelledby="dLabel">
         <li>&nbsp;</li>
         <li><a href="./logOut" class="orange">Log Out</a></li>
     </ul>
